crates/uitest/fixtures/ty/alias_arg_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/alias_arg_mismatch.fe
---
error[3-0003]: all type parameters of type alias must be given
   ┌─ alias_arg_mismatch.fe:2:8
   │
 2 │     t: T1<i32>,
   │        ^^^^^^^ expected at least 2 arguments here
   ·
12 │ type T1<T, K> = S<T, K>
   │ ----------------------- type alias defined here

error[3-0003]: all type parameters of type alias must be given
   ┌─ alias_arg_mismatch.fe:13:14
   │
12 │ type T1<T, K> = S<T, K>
   │ ----------------------- type alias defined here
13 │ type T2<T> = T1<T>
   │              ^^^^^ expected at least 2 arguments here


